--- a/templates/admin/base_ecomer.html
+++ b/templates/admin/base_ecomer.html
@@ -71,10 +71,10 @@
                                     </a>
                                     <ul class="header3-sub-list list-unstyled">
                                         <li>
-                                            <a href="index.html">Ver</a>
+                                            <a href="{% url 'pedido:ProductoLista' %}">Productos</a>
                                         </li>
                                         <li>
-                                            <a href="index.html">Crear</a>
+                                            <a href="index.html">Pedidos</a>
                                         </li>
                                     </ul>
                                 </li>
