--- a/templates/pedido/crear_producto.html
+++ b/templates/pedido/crear_producto.html
@@ -1,14 +1,14 @@
- {% extends 'admin/base_ecomer.html'%}
- {% block contenido %}
+{% extends 'admin/base_ecomer.html'%}
+{% block contenido %}
 <div class="container">
     <div class="row">
 
-        <div class="card col-sm-9">
+        <div class="card col-sm-7">
             <div class="card-header">
-                <strong>Usuarios</strong>
+                <strong>Producto</strong>
             </div>
             <div class="card-body card-block">
-                <form action="" method="post" class="">
+                <form action="" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     {% for input in form %}
                     <div class="form-group">
@@ -30,4 +30,4 @@
 
     </div>
 </div>
- {% endblock contenido %}
+{% endblock contenido %}
