Cambios pedidos Taqco

--- a/templates/admin/base_ecomer.html
+++ b/templates/admin/base_ecomer.html
@@ -81,6 +81,9 @@
                                     <li>
                                         <a href="{% url 'pedido:listar_pedido' %}">Pedidos</a>
                                     </li>
+                                    <li>
+                                        <a href="{% url 'pedido:carrito' %}">Ver carrito de compras</a>
+                                    </li>
                                     {% endif %}
                                 </ul>
                             </li>
