--- a/templates/admin/crear_usuarios.html
+++ b/templates/admin/crear_usuarios.html
@@ -1,5 +1,14 @@
  {% extends 'admin/base_ecomer.html'%}
  {% block contenido %}
+ 
+ <style>
+    ul.errorlist{
+        color:red;
+    }
+    ul{
+        text-align: left;
+    }
+</style>
 <div class="container">
     <div class="row">
 
