--- a/templates/pedido/conf_create.html
+++ b/templates/pedido/conf_create.html
@@ -5,7 +5,7 @@
 
         <div class="card col-sm-7">
             <div class="card-header">
-                <strong>Crear nuevo producto</strong>
+                <strong>Configuración</strong>
             </div>
             <div class="card-body card-block">
                 <form action="" method="post" enctype="multipart/form-data">
